--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
     "name": "react-placeholder-fallback",
     "version": "0.0.1",
     "types": "dist",
-    "main": "dist/index.bundle.js",
+    "main": "dist/index.js",
     "author": "weffe",
     "homepage": "https://github.com/Weffe/react-placeholder-fallback#readme",
     "bugs": "https://github.com/Weffe/react-placeholder-fallback/issues",
@@ -10,32 +10,35 @@
         "type": "git",
         "url": "https://github.com/Weffe/react-placeholder-fallback.git"
     },
+    "sideEffects": false,
     "devDependencies": {
         "@types/react": "^16.8.0",
         "@types/react-dom": "^16.0.11",
-        "css-loader": "^2.1.0",
-        "fork-ts-checker-webpack-plugin": "^0.5.2",
-        "mini-css-extract-plugin": "^0.5.0",
-        "optimize-css-assets-webpack-plugin": "^5.0.1",
-        "peer-deps-externals-webpack-plugin": "^1.0.4",
-        "progress-bar-webpack-plugin": "^1.12.1",
+        "npm-run-all": "^4.1.5",
+        "parcel-bundler": "^1.11.0",
+        "parcel-plugin-typescript": "^1.0.0",
         "react": "^16.7.0",
         "react-dom": "^16.7.0",
         "rimraf": "^2.6.3",
-        "ts-loader": "^5.3.3",
-        "tslib": "^1.9.3",
-        "typescript": "^3.2.4",
-        "uglifyjs-webpack-plugin": "^2.1.1",
-        "webpack": "^4.29.0",
-        "webpack-cli": "^3.2.1"
+        "typescript": "^3.2.4"
     },
     "scripts": {
+        "start": "run-p parcel:watch type-check:watch",
+        "parcel:watch": "parcel watch src/index.ts",
+        "type-check:watch": "tsc --emitDeclarationOnly --watch",
         "prebuild": "rimraf dist",
-        "build": "webpack",
-        "dev": "webpack -w"
+        "build": "run-s create-dts parcel:build",
+        "parcel:build": "parcel build src/index.ts --global react-placeholder-fallback",
+        "create-dts": "tsc --emitDeclarationOnly"
     },
     "peerDependencies": {
         "react": "^0.14 || ^15 || ^16",
         "react-dom": "^0.14 || ^15 || ^16"
-    }
+    },
+    "browserslist": [
+        ">0.2%",
+        "not dead",
+        "not ie <= 10",
+        "not op_mini all"
+    ]
 }
