--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,7 +3,7 @@
         "baseUrl": ".",
         "outDir": "dist",
         "target": "es5",
-        "module": "es6",
+        "module": "commonjs",
         "declaration": true,
         "sourceMap": true,
         "esModuleInterop": true,
@@ -24,5 +24,7 @@
     "exclude": [
         "node_modules",
         "dist",
+        "docs",
+        "config"
     ]
 }
